--- a/chat_tavern/package.json
+++ b/chat_tavern/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vue-tsc && vite build",
+    "electron:dev": "electron .",
+    "electron:build": "vite build && electron-builder",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
@@ -36,6 +38,28 @@
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.1.10",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8"
+  },
+  "main": "src/main/index.js",
+  "build": {
+    "appId": "com.your-app.id",
+    "productName": "Your App Name",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "files": [
+      "dist/**/*",
+      "src/main/**/*"
+    ]
+  },
+  "description": "Chat Tavern Application",
+  "author": {
+    "name": "someiyoshino",
+    "email": "2939827325@qq.com"
   }
 }
