new file:   chat_tavern/electron-builder.config.js 	modified:   chat_tavern/index.html 	modified:   chat_tavern/package.json 	modified:   chat_tavern/src/main/index.js 	modified:   chat_tavern/src/router/index.ts 	deleted:    chat_tavern/vite.config.js 	modified:   chat_tavern/vite.config.ts

--- a/chat_tavern/package.json
+++ b/chat_tavern/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "electron:dev": "electron .",
-    "electron:build": "vite build && electron-builder",
+    "build": "vue-tsc --noEmit && vite build",
+    "electron:dev": "vite dev & electron .",
+    "electron:build": "vue-tsc --noEmit && vite build && electron-builder",
+    "electron:serve": "electron .",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
@@ -44,18 +45,20 @@
   },
   "main": "src/main/index.js",
   "build": {
-    "appId": "com.your-app.id",
-    "productName": "Your App Name",
+    "appId": "com.chat.tavern",
+    "productName": "Chat Tavern",
     "directories": {
-      "output": "dist_electron"
-    },
-    "win": {
-      "target": "nsis"
+      "output": "release"
     },
     "files": [
       "dist/**/*",
+      "dist-electron/**/*",
       "src/main/**/*"
-    ]
+    ],
+    "asar": true,
+    "win": {
+      "target": ["nsis"]
+    }
   },
   "description": "Chat Tavern Application",
   "author": {
