--- a/chat_tavern/package.json
+++ b/chat_tavern/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "lucide-vue-next": "^0.460.0",
     "pinia": "^2.2.6",
+    "theme-change": "^2.5.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -30,6 +31,9 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
@@ -39,9 +43,7 @@
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
-    "vue-tsc": "^2.1.10",
-    "electron": "^33.2.0",
-    "electron-builder": "^25.1.8"
+    "vue-tsc": "^2.1.10"
   },
   "main": "src/main/index.js",
   "build": {
@@ -57,7 +59,9 @@
     ],
     "asar": true,
     "win": {
-      "target": ["nsis"]
+      "target": [
+        "nsis"
+      ]
     }
   },
   "description": "Chat Tavern Application",
