--- a/chat_tavern/package.json
+++ b/chat_tavern/package.json
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "emoji-picker-element": "^1.25.0",
     "lucide-vue-next": "^0.460.0",
     "pinia": "^2.2.6",
     "theme-change": "^2.5.0",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue3-emoji-picker": "^1.1.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
